[package]
name = "deno-digest-plugin"
version = "0.1.0"
authors = ["linux_china <libing.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.89.0"
futures = "0.3.15"
serde = "1"
